--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@devvit/web": "0.12.0",
     "devvit": "0.12.0",
     "express": "5.1.0",
+    "gsap": "^3.13.0",
     "honeycomb-grid": "^4.1.5"
   },
   "devDependencies": {
