--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,270 @@
-node_modules
-.yarn
-logs
+# ==========================================
+# Dependencies
+# ==========================================
+node_modules/
+jspm_packages/
+.pnp
+.pnp.js
+
+# ==========================================
+# Build outputs
+# ==========================================
+dist/
+dist-ssr/
+build/
+out/
+webroot/
+*.local
+
+# ==========================================
+# TypeScript
+# ==========================================
+*.tsbuildinfo
+*.d.ts.map
+
+# ==========================================
+# Vite
+# ==========================================
+.vite/
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+# ==========================================
+# Testing & Coverage
+# ==========================================
+coverage/
+*.lcov
+.nyc_output/
+test-results/
+*.test.js
+*.spec.js
+
+# ==========================================
+# Logs
+# ==========================================
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ==========================================
+# Environment variables
+# ==========================================
+.env
+.env.*
+!.env.example
+!.env.sample
+
+# ==========================================
+# Package managers
+# ==========================================
+# npm
+.npm/
+# Yarn
+.yarn/
+.yarn-integrity
+.yarnrc.yml
+.pnp.*
+# pnpm
+pnpm-lock.yaml
+# Output of 'npm pack'
+*.tgz
+
+# ==========================================
+# Caches
+# ==========================================
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+.vuepress/dist/
+.serverless/
+.fusebox/
+.dynamodb/
+.tern-port
+.eslintcache
+.stylelintcache
+.prettierignore
+
+# ==========================================
+# Editor directories and files
+# ==========================================
+# VSCode
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
+!.vscode/settings.json
+*.code-workspace
+
+# IntelliJ/WebStorm
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*.swn
+*.sw?
+*~
+Session.vim
+.netrwhist
+tags
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# ==========================================
+# Operating System files
+# ==========================================
+# macOS
 .DS_Store
-webroot
-dist
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ==========================================
+# Devvit specific
+# ==========================================
+# Devvit local development files
+devvit-local/
+.devvit/
+
+# Keep devvit configuration
+!devvit.json
+!devvit.yaml
+
+# ==========================================
+# Project specific
+# ==========================================
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Backup files
+*.backup
+*.bak
+*.orig
+
+# Lock files (optional - uncomment if you don't want to track)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Private keys and certificates
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+
+# Database files
+*.sqlite
+*.sqlite3
+*.db
+
+# Compressed files
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Media files (if not needed in repo)
+# *.mp4
+# *.mp3
+# *.mov
+# *.avi
+
+# Documentation build
+docs/_build/
+docs/.vuepress/dist/
+
+# Miscellaneous
+.grunt
+.lock-wscript
+.node_repl_history
+.yarn-integrity
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Python (if using any Python scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+*.so
+
+# Ruby (if using any Ruby scripts)
+*.gem
+*.rbc
+.bundle/
+vendor/bundle/
+
+# ==========================================
+# Debug files
+# ==========================================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug.log
+error.log
